<resources>
    <string name="app_name">Cago</string>
    <string name="app_label">Cago</string>
    <string name="add_pack">Add pack</string>
    <string name="pack">Package</string>
    <string name="positive_btn">OK</string>
    <string name="negative_btn">Cancel</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="run">Run</string>
    <string name="null_activity">null activity</string>
    <string name="input">Input</string>
    <string name="name">Name</string>
    <string name="value">Value</string>
    <string name="off">false</string>
    <string name="on">true</string>
    <string name="output">Output</string>
    <string name="visible">Visible</string>
    <string name="formula">Formula</string>
    <string name="loading">Loading \"%s\"</string>
    <string name="close">Close</string>
    <string name="info">Info</string>
    <string name="description">Description</string>
    <string name="export">Export</string>
    <string name="delete">Delete</string>
    <string name="delete_pack">Delete package</string>
    <string name="settings">Settings</string>
    <string name="new_pack">New package</string>
    <string name="edit_pack">Edit package</string>
    <string name="empty_input_list">No inputs</string>
    <string name="empty_output_list">No outputs</string>
    <string name="empty_input_edit">Add input</string>
    <string name="empty_output_edit">Add output</string>
    <string name="filed">Field edit</string>
    <string name="text">Text</string>
    <string name="open_pack">Open pack</string>
    <string name="open">Open</string>
    <string name="rename">Rename</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="upload">Upload</string>
    <string name="search">Search</string>
    <string name="search_hint">Package</string>
    <string name="no_results">No results :(</string>
    <string name="error_create">Package cannot be created</string>
    <string name="error_rename">Package cannot be renamed</string>
    <string name="error_delete">Package cannot be deleted</string>
    <string name="error_upload">Package cannot be uploaded</string>
    <string name="error_download">Package cannot be downloaded</string>
    <string name="error_open">Package cannot be opened</string>
    <string name="error_results">Results cannot be loaded</string>
    <string name="error_share">Package \"%s\" must be uploaded firstly.</string>
    <string name="error_field_not_chosen">Choose field firstly.</string>
    <string name="input_edit">Input (edit)</string>
    <string name="input_copy">Input (copy)</string>
    <string name="output_edit">Output (edit)</string>
    <string name="output_copy">Output (copy)</string>
    <string name="question_delete">Delete \"%s\"?</string>
    <string name="help">Documentation</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error_initializing">At first start app must has Internet connection in case of initializing user.</string>
    <string name="message">Message</string>
    <string name="warning">Warning!</string>
    <string name="link_repo">https://cago.readthedocs.io/en/latest/</string>
    <string name="link_privacy_policy">https://docs.google.com/document/d/16mpSKnn7tO0x6g61Adhe4R32yHolV4Ebx6etHL82jQo/edit?usp=sharing</string>
    <string name="empty_menu_list">There is no package. You can create new one!</string>
    <string name="email">Email</string>
    <string name="log_in">Log in</string>
    <string name="go">Go</string>
    <string name="auth_msg">You receive an email with login link.\nOpen link in Cago app.</string>
    <string name="error_send_link">Log-in link was not sent. :(</string>
    <string name="error_log_in">Unexpected error during logging in.</string>
    <string name="repeat">Repeat</string>
    <string name="contact">Contact developer</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="log_out">Log out</string>
    <string name="restart_app">In order to apply changes restart application.</string>
    <string name="question_logout">Log out? All packages will be deleted from device!</string>
    <string name="no_info">No information</string>
    <string name="publication">Public</string>
    <string name="sync">Sync projects</string>
    <string name="unknown">unidentified</string>
</resources>
