<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_search" 
        app:showAsAction="ifRoom" />
    <item android:id="@+id/sync"
        android:title="@string/sync"
        android:icon="@drawable/ic_sync"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/docs"
        android:title="@string/help"
        android:icon="@drawable/ic_doc"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/contact"
        android:title="@string/contact"
        android:icon="@drawable/ic_edit"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/privacy"
        android:title="@string/privacy_policy"
        android:icon="@drawable/ic_lock"
        app:showAsAction="ifRoom"/>
</menu>