<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        android:divider="@drawable/divider8"
        android:showDividers="middle">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/output"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:autofillHints="no" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/visible"
            android:checked="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:divider="@drawable/divider8"
            android:showDividers="middle"
            android:layout_gravity="end">

            <Button
                android:id="@+id/negative"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/negative_btn" />

            <Button
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:id="@+id/positive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/positive_btn" />

        </LinearLayout>

    </LinearLayout>
</layout>