<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="listener"
            type="com.cago.core.dialogs.DialogCallback" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/_background"
        android:orientation="vertical"
        android:layout_gravity="center">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Option"
            android:drawableStart="@drawable/ic_open"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> listener.activate(@string/open)}"
            android:text="@string/open" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Option"
            android:drawableStart="@drawable/ic_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> listener.activate(@string/share)}"
            android:text="@string/share" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Option"
            android:drawableStart="@drawable/ic_cross"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> listener.activate(@string/delete)}"
            android:text="@string/delete" />

    </LinearLayout>
    </FrameLayout>
</layout>
